# Quad-Kernel-Streaming

./: .gitignore  CMakeLists.txt  COMPILATION_MANUAL.md  LICENSE  QUAD_KERNEL_ASSEMBLY_PLAN - Copy (2).md  README.md  REQUIREMENTS.md
quad_kernel_ada_math/: CMakeLists.txt  alire.toml  bezier_spline_engine.adb  bezier_spline_engine.ads  color_space_mathematics.adb  color_space_mathematics.ads  convolution_correlation.adb  convolution_correlation.ads  edge_detection_algorithms.adb  edge_detection_algorithms.ads  fourier_transforms.adb  fourier_transforms.ads  geometric_primitives.adb  geometric_primitives.ads  histogram_equalization_algorithm.adb  histogram_equalization_algorithm.ads  interpolation_methods.adb  interpolation_methods.ads  kernel_bridge_adapter.adb  kernel_bridge_adapter.ads  matrix_operations_kernel.adb  matrix_operations_kernel.ads  morphological_operations.adb  morphological_operations.ads  optical_flow_computation.adb  optical_flow_computation.ads  perspective_transform_matrix.adb  perspective_transform_matrix.ads  polynomial_fitting_solver.adb  polynomial_fitting_solver.ads  precision_arithmetic_lib.adb  precision_arithmetic_lib.ads  quad_kernel_ada_math.gpr  quaternion_rotation_math.adb  quaternion_rotation_math.ads  statistical_analysis_module.adb  statistical_analysis_module.ads  test_bezier.adb  test_color_space.adb  test_convolution.adb  (+13 more)
quad_kernel_ada_math/original_notes/: bezier_spline_engine.md  color_space_mathematics.md  convolution_correlation.md  edge_detection_algorithms.md  fourier_transform_library.md  geometric_primitives.md  histogram_equalization_algorithm.md  interpolation_methods.md  matrix_operations_kernel.md  morphological_operations.md  optical_flow_computation.md  perspective_transform_matrix.md  polynomial_fitting_solver.md  precision_arithmetic_lib.md  quaternion_rotation_math.md  statistical_analysis_module.md
quad_kernel_c_video/: CMakeLists.txt  color_converter.c  color_converter.h  entropy_coder.c  entropy_coder.h  filter_chain.c  filter_chain.h  hvcal_core.c  hvcal_core.h  motion_engine.c  motion_engine.h  nvenc_manager.c  nvenc_manager.h  rate_controller.c  rate_controller.h  test_video.c  transform_quant.c  transform_quant.h  video_kernel_adapter.c
quad_kernel_c_video/original_notes/: adaptive_quality_scaling.md  advanced_h265_features_vui_vps_sps_pps.md  alpha_channel_encoding.md  amd_vcn_driver_support.md  av1_codec_implementation.md  bitrate_adaptation_algorithm.md  codec_configuration_manager.md  codec_profile_level_management.md  codec_version_compatibility.md  color_space_conversion_pipeline.md  entropy_encoding_(cavlc_cabac).md  frame_rate_control_and_synchronization.md  gop_(group_of_pictures)_structure.md  hardware_memory_optimization.md  hardware_video_codec_abstraction_layer.md  hdr_sdr_tone_mapping.md  intel_quicksync_implementation.md  intra_inter_frame_encoding.md  motion_estimation_and_compensation.md  multi_bitrate_ladder_generator.md  network_adaptive_encoding.md  nvidia_nvenc_integration_(h.264_h.265_av1).md  packet_loss_resilience.md  parallel_encoding_optimization.md  perceptual_quality_tuning.md  quality_metrics_(ssim_psnr).md  rate_control_(cbr_vbr_cqp).md  rate_distortion_optimization.md  real_time_bitstream_analysis.md  reference_frame_management.md  scene_change_detection.md  software_fallback_codecs_(libx264_libx265).md  temporal_compression_strategy.md  temporal_prediction_refinement.md  transform_and_quantization_pipeline.md  ultra_low_latency_mode.md  video_buffer_management_system.md  video_filter_chain_system.md  video_preprocessing_(scaling_deinterlacing).md  vr_360_video_encoding.md
quad_kernel_cpp_audio/: CMakeLists.txt  aac_lc_he_aac_encoder.md  audio_buffer_ringbuffer.md  audio_effect_processor.md  audio_format_converter.md  audio_preprocessing_chain.md  audio_quality_analyzer.md  av_sync_controller.md  dynamic_range_processor.md  echo_cancellation_advanced.md  loudness_normalization.md  multichannel_upmix_engine.md  music_frequency_optimizer.md  noise_suppression_dsp.md  opus_encoder_advanced.md  podcast_speech_enhancer.md  real_time_mixing_engine.md  sample_rate_converter.md  spatial_audio_engine.md  surround_sound_processor.md  voice_activity_detection.md
quad_kernel_cpp_audio/include/: aac_lc_he_aac_encoder.h  audio_buffer_ringbuffer.h  audio_effect_processor.h  audio_format_converter.h  audio_preprocessing_chain.h  audio_quality_analyzer.h  av_sync_controller.h  dynamic_range_processor.h  echo_cancellation_advanced.h  loudness_normalization.h  multichannel_upmix_engine.h  music_frequency_optimizer.h  noise_suppression_dsp.h  opus_encoder_advanced.h  podcast_speech_enhancer.h  real_time_mixing_engine.h  sample_rate_converter.h  spatial_audio_engine.h  surround_sound_processor.h  voice_activity_detection.h
quad_kernel_cpp_audio/src/: aac_lc_he_aac_encoder.cpp  audio_effect_processor.cpp  audio_format_converter.cpp  audio_kernel_adapter.cpp  audio_preprocessing_chain.cpp  av_sync_controller.cpp  (+15 more)
quad_kernel_rust_wasm/: Cargo.toml  adaptive_bitrate_algorithm.md  buffer_health_monitoring.md  cross_origin_security.md  dash_protocol_support.md  error_handling_strategy.md  graceful_degradation.md  memory_pool_allocator.md  ring_buffer_safe.md  simd_wasm_optimizations.md  streaming_analytics_client.md  streaming_protocol_hls.md  streaming_protocol_rtmp.md  streaming_protocol_srt.md  thread_pool_wasm.md  wasm_binding_layer.md  wasm_performance_profiling.md  webrtc_data_channel.md  websocket_streaming.md
(+32 files in other folders)
